--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "react-component-library",
   "version": "1.0.0",
   "main": "build/index.js",
-  "module": "build/index.esm.js",
   "files": [
     "build"
   ],
-  "types": "build/index.d.ts",
-  "description": "A skeleton to create your own React component library using Rollup, TypeScript, Sass and Storybook",
+  "description": "A skeleton to create your own React component library using Rollup, Sass and Storybook",
   "scripts": {
     "build": "rollup -c",
     "test": "jest",
@@ -15,55 +13,61 @@
     "storybook": "start-storybook -p 6006",
     "storybook:export": "build-storybook",
     "generate": "node ./util/create-component",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "build-storybook": "build-storybook"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HarveyD/react-component-library.git"
+    "url": "git+https://github.com/ExodusMovement/react-component-library.git"
   },
   "keywords": [
     "React",
     "Component",
     "Library",
     "Rollup",
-    "Typescript",
     "Sass",
     "Storybook"
   ],
   "author": "Harvey Delaney",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/HarveyD/react-component-library/issues"
+    "url": "https://github.com/ExodusMovement/react-component-library/issues"
   },
-  "homepage": "https://github.com/HarveyD/react-component-library#readme",
+  "homepage": "https://github.com/ExodusMovement/react-component-library#readme",
   "peerDependencies": {
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
-    "@rollup/plugin-commonjs": "^11.1.0",
-    "@rollup/plugin-node-resolve": "^7.1.3",
-    "@storybook/react": "^5.3.19",
+    "@babel/preset-env": "7.11.5",
+    "@babel/preset-react": "7.10.4",
+    "@rollup/plugin-commonjs": "^15.1.0",
+    "@rollup/plugin-node-resolve": "^9.0.0",
+    "@storybook/addon-actions": "^6.0.21",
+    "@storybook/addon-essentials": "^6.0.21",
+    "@storybook/addon-links": "^6.0.21",
+    "@storybook/react": "^6.0.21",
     "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.2",
-    "@types/jest": "^24.0.24",
+    "@testing-library/react": "^11.0.4",
+    "@types/jest": "^26.0.14",
     "@types/react": "^16.9.12",
     "@types/react-dom": "^16.9.8",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^9.1.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
+    "jest": "^26.4.2",
     "node-sass": "^4.14.1",
+    "prettier": "2.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "rollup": "^1.27.4",
+    "react-is": "^16.13.1",
+    "rollup": "^2.28.1",
+    "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^3.1.2",
-    "rollup-plugin-typescript2": "^0.27.0",
-    "sass-loader": "^8.0.0",
-    "ts-jest": "^24.2.0",
-    "typescript": "^3.7.2"
-  }
+    "sass-loader": "^10.0.2"
+  },
+  "dependencies": {}
 }
