--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
   "description": "A skeleton to create your own React component library using Rollup, Sass and Storybook",
   "scripts": {
     "build": "rollup -c",
-    "test": "jest",
-    "test:watch": "jest --watch",
     "storybook": "start-storybook -p 6006",
     "storybook:export": "build-storybook",
     "generate": "node ./util/create-component",
@@ -48,15 +46,12 @@
     "@storybook/addon-essentials": "^6.0.21",
     "@storybook/addon-links": "^6.0.21",
     "@storybook/react": "^6.0.21",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^11.0.4",
-    "@types/jest": "^26.0.14",
     "@types/react": "^16.9.12",
     "@types/react-dom": "^16.9.8",
+    "autoprefixer": "9.7.2",
     "babel-loader": "^8.1.0",
     "babel-preset-react-app": "^9.1.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.4.2",
     "node-sass": "^4.14.1",
     "prettier": "2.1.2",
     "react": "^16.13.1",
@@ -67,6 +62,7 @@
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^3.1.2",
+    "rollup-plugin-terser": "7.0.2",
     "sass-loader": "^10.0.2"
   },
   "dependencies": {}
